<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="welcome_to_floria_title">Welcome to Floria</string>
    <string name="add_product_title"> Add Products</string>
    <string name="price">Price</string>
    <string name="Arabic">العربية</string>
    <string name="English">English</string>
    <string name="money">Financial</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="flower_types">Flower Types</string>
    <string name="title_complain">Enter Title more than 3 characters</string>
    <string name="message_complain">Please insert at least 3 characters and max 250 char</string>
    <string name="reply_title">Write your reply here </string>

    <string name="apartment_number_title">Apartment number </string>
    <string name="in_progress_title">In Progress</string>
    <string name="shipped_title">Shipped</string>
    <string name="deliverd_title">Delivered </string>
    <string name="canceld_title">Cancelled </string>
    <string name="fawry">Fawry</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">Change Language</string>
    <string name="sure">Are you sure , Application will start in Case confirmation ?</string>

    <string name="are_you_sure_you_want_to_cancel_order_title">Are you sure you want to cancel this order  ?</string>
    <string name="no_title">NO</string>
    <string name="yes_title">YES</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="status">Status</string>
    <string name="total_orders_by_visa_title">Total Orders By visa</string>
    <string name="floria">Floria</string>
    <string name="you">You</string>
    <string name="your_salary_from_order_title">Your Salary from Order</string>
    <string name="log_out">Sign Out</string>
    <string name="are_you_sure">"Are you sure you want to Sign Out ? "</string>


</resources>